--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -1,38 +1,22 @@
-// Solarized
-
 // background tones (dark)
-@base03: #002b36;
-@base02: #073642;
-// content tones
-@base01: #586e75;
-@base00: #657b83;
-@base0:  #839496;
-@base1:  #93a1a1;
-// background tones (light)
-@base2:  #eee8d5;
-@base3:  #fdf6e3;
-
-@yellow: #b58900;
-@orange: #cb4b16;
-@red:    #dc322f;
-@magenta:#d33682;
-@violet: #6c71c4;
-@blue:   #268bd2;
-@cyan:   #2aa198;
-@green:  #859900;
-
-// Collab
-
-// background tones (light)
-@c-base3:  #fafafa;
-@c-base2:  #eee;
+@base03: #2B2F3E; // TODO
+@base02: #3E4457;
 
 // content tones
-@c-base01: #999;
-@c-base00: #aaa;
-@c-base0:  #eee;
-@c-base1:  #fff;
+@base01: #4B4E67;
+@base00: #646889;
+@base0:  #767b9e;
+@base1:  #CDD1DD;
 
-// background tones (dark)
-@c-base02:  #444;
-@c-base03:  #2d2f30;
+// background tones (light)
+@base2: #fefefe;
+@base3: #fff;
+
+@yellow:  #D7FF98;
+@orange:  #FAA486;
+@red:     #ED7E79;
+@magenta: #ff5f97;
+@violet:  #948cf1;
+@blue:    #7376F0;
+@cyan:    #2fe7be;
+@green:   #32b95f;
