--- a/stylesheets/editor.less
+++ b/stylesheets/editor.less
@@ -1,11 +1,10 @@
 @import "colors.less";
 
 @editor-font-size: 18px;
-@editor-line-height: 19px;
+@editor-line-height: 23px;
 
 .editor-wrapper {
   height: 100%;
-  padding-bottom: @editor-line-height * 2;
 }
 
 .editor {
@@ -14,27 +13,25 @@
   font-size: @editor-font-size;
   line-height: @editor-line-height;
   font-family: 'FantasqueSansMono';
-  overflow-y: auto;
+  overflow: hidden;
 
   pre, pre > code {
     margin: 0;
     padding: 0;
-    background: @c-base3;
+    padding-left: 1ch;
     border-radius: 0;
     border: 0;
     word-wrap: normal;
     white-space: pre;
     font-size: @editor-font-size;
     line-height: @editor-line-height;
-    text-shadow: 0 1px #fff;
     font-family: 'FantasqueSansMono';
-    color: @base1;
     height: 100%;
   }
 
   pre {
     position: relative;
-    padding-left: 6ch;
+    padding-left: 7ch;
     counter-reset: linenumber;
   }
 
@@ -43,12 +40,14 @@
   }
 
   .line-numbers-rows {
-    background: @c-base2;
+    border-right: 1px solid darken(@base2, 10%);
     position: absolute;
     pointer-events: none;
+    background: @base2;
     top: 0;
     left: -6ch;
     width: 6ch;
+    min-height: 100%;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -63,7 +62,7 @@
 
   .line-numbers-rows > span:before {
     content: counter(linenumber);
-    color: @c-base00;
+    color: @base1;
     display: block;
     padding-right: 1ch;
     text-align: right;
@@ -71,23 +70,30 @@
 
   .content {
     width: 100%;
+    background: @base2;
   }
 
   .powerline {
     position: fixed;
     bottom: 0;
-    background: @c-base0;
-    height: @editor-line-height * 2;
     width: 100%;
-    color: @c-base00;
-    margin: 0;
+    height: 32px;
+    padding-left: 8ch;
+    margin-bottom: 15px;
 
     .filename {
       display: inline-block;
-      background: #fff;
-      margin: 5px;
+      background: darken(@base2, 10%);
       padding: 5px 10px;
       border-radius: 20px;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+
+      &:hover {
+        opacity: 0.3;
+      }
     }
   }
 
@@ -95,11 +101,12 @@
     position: absolute;
     top: 0;
     left: 0;
+    margin-left: 8ch;
 
     .cursor {
       width: 1ch;
-      height: @editor-font-size;
-      background: @c-base01;
+      height: @editor-line-height;
+      background: @base0;
       -webkit-animation: blink 0.8s linear 0s infinite;
       -moz-animation: blink 0.8s linear 0s infinite;
       -ms-animation: blink 0.8s linear 0s infinite;
