--- a/stylesheets/fonts.less
+++ b/stylesheets/fonts.less
@@ -9,3 +9,9 @@
   src: url('../fonts/FantasqueSansMonoBold.woff') format('woff'),
        url('../fonts/FantasqueSansMonoBold.ttf') format('truetype');
 }
+
+@font-face {
+  font-family: 'Titillium';
+  src: url('../fonts/titillium-thin-webfont.woff') format('woff'),
+       url('../fonts/titillium-thin-webfont.ttf') format('truetype');
+}
