--- a/stylesheets/theme.less
+++ b/stylesheets/theme.less
@@ -1,12 +1,8 @@
-/* http://jmblog.github.com/color-themes-for-google-code-highlightjs */
-
-/* Tomorrow Comment */
 .hljs-comment,
 .hljs-title {
-  color: #8e908c;
+  color: @base1;
 }
 
-/* Tomorrow Red */
 .hljs-variable,
 .hljs-attribute,
 .hljs-tag,
@@ -19,10 +15,9 @@
 .css .hljs-id,
 .css .hljs-class,
 .css .hljs-pseudo {
-  color: #c82829;
+  color: @red;
 }
 
-/* Tomorrow Orange */
 .hljs-number,
 .hljs-preprocessor,
 .hljs-pragma,
@@ -30,31 +25,27 @@
 .hljs-literal,
 .hljs-params,
 .hljs-constant {
-  color: #f5871f;
+  color: @orange;
 }
 
-/* Tomorrow Yellow */
 .ruby .hljs-class .hljs-title,
 .css .hljs-rules .hljs-attribute {
-  color: #eab700;
+  color: @yellow;
 }
 
-/* Tomorrow Green */
 .hljs-string,
 .hljs-value,
 .hljs-inheritance,
 .hljs-header,
 .ruby .hljs-symbol,
 .xml .hljs-cdata {
-  color: #718c00;
+  color: @green;
 }
 
-/* Tomorrow Aqua */
 .css .hljs-hexcolor {
-  color: #3e999f;
+  color: @cyan;
 }
 
-/* Tomorrow Blue */
 .hljs-function,
 .python .hljs-decorator,
 .python .hljs-title,
@@ -63,19 +54,18 @@
 .perl .hljs-sub,
 .javascript .hljs-title,
 .coffeescript .hljs-title {
-  color: #4271ae;
+  color: @blue;
 }
 
-/* Tomorrow Purple */
 .hljs-keyword,
 .javascript .hljs-function {
-  color: #8959a8;
+  color: @violet;
 }
 
 .hljs {
   display: block;
   background: white;
-  color: #4d4d4c;
+  color: @base0;
   padding: 0.5em;
 }
 
