--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -5,18 +5,32 @@
 @import "modal.less";
 
 html, body {
-  background: @c-base3;
+  background: @base3;
   overflow: hidden;
   height: 100%;
+  color: @base0;
+}
+
+h1, h2, h3 {
+  font-family: 'Titillium';
+  color: @base02;
+}
+
+a {
+  color: @violet;
+  &:hover {
+    color: darken(@violet, 30%);
+  }
 }
 
 .layout {
   height: 100%;
-  padding-left: 200px;
+  padding-left: 320px;
   left: 0;
 }
 
 @import "navigation.less";
+@import "page.less";
 @import "editor.less";
 
 @media (max-width: 767px) {
@@ -55,20 +69,20 @@ html, body {
 }
 
 ::-webkit-scrollbar-track {
-  background: @c-base0;
+  background: @base2;
   -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.1);
 }
 
 ::-webkit-scrollbar-thumb {
-  background: @c-base00;
+  background: @base1;
   -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.2);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: @c-base00;
+  background: @base1;
 }
 
 ::-webkit-scrollbar-thumb:active {
-  background: @c-base00;
+  background: @base1;
   -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.3);
 }
