--- a/stylesheets/modal.less
+++ b/stylesheets/modal.less
@@ -1,7 +1,7 @@
 @import "colors.less";
 
 .modal-content {
-  background: #fefefe;
+  background: @base2;
   border: 0;
   border-radius: 3px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.5);
