--- a/stylesheets/editor.less
+++ b/stylesheets/editor.less
@@ -13,7 +13,7 @@
   font-size: @editor-font-size;
   line-height: @editor-line-height;
   font-family: 'FantasqueSansMono';
-  overflow: hidden;
+  overflow: auto;
 
   pre, pre > code {
     margin: 0;
@@ -71,6 +71,7 @@
   .content {
     width: 100%;
     background: @base2;
+    overflow: visible;
   }
 
   .powerline {
