--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -29,6 +29,15 @@ a {
   left: 0;
 }
 
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translateX(-50%, -50%);
+}
+
 @import "navigation.less";
 @import "page.less";
 @import "editor.less";
