--- a/templates/status-closed.html
+++ b/templates/status-closed.html
@@ -1,3 +1,10 @@
 <div class="center">
   <h3>Connection lost</h3>
+  <center>
+    <button
+      class="btn btn-primary"
+      onClick="window.location.reload()">
+      refresh
+    </button>
+  </center>
 </div>
