--- a/templates/home.html
+++ b/templates/home.html
@@ -32,14 +32,14 @@
 <div id="video" class="modal fade">
   <div class="modal-dialog modal-lg">
     <div class="modal-content" style="line-height: 0">
-      <iframe
-        src="//player.vimeo.com/video/89740761"
-        width="900"
-        height="466"
-        frameborder="0"
-        webkitallowfullscreen
-        mozallowfullscreen
-        allowfullscreen></iframe>
+      <div class="video-container">
+        <iframe src="//www.youtube.com/embed/u73O79Ztvts"
+          width="900"
+          height="466"
+          frameborder="0"
+          allowfullscreen>
+        </iframe>
+      </div>
     </div>
   </div>
 </div>
