--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -3,6 +3,7 @@
 @import "theme.less";
 @import "form.less";
 @import "modal.less";
+@import "buttons.less";
 
 html, body {
   background: @base3;
@@ -36,16 +37,6 @@ a {
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translateX(-50%, -50%);
-}
-
-.btn-primary {
-  border-radius: 30px;
-  background: @violet;
-  border: 0;
-  margin-bottom: 100px;
-  &:hover {
-    background: lighten(@violet, 5%);
-  }
 }
 
 @import "navigation.less";
