--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<div class="promo container">
+<div class="promo container center-me">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h1>Collab</h1>
