--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,22 @@
       <div>
         <a href="https://github.com/dennis84/collab">Backend</a> |
         <a href="https://github.com/dennis84/vim-collab">VIM Plugin</a> |
+        <a href="https://github.com/dennis84/collab-sublime">Sublime Text 2 Plugin</a> |
         <a href="https://github.com/dennis84/collab-web">Web App</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="footer">
+  <div class="container center-me">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <h2>Let's make it together</h2>
+        <p class="lead">
+          If you have any idea to improve Collab, feel free to open an issue or
+          send me an <a href="mailto:d.dietrich84@gmail.com">e-mail</a>.
+        </p>
       </div>
     </div>
   </div>
