--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<div class="promo container center-me">
+<section class="promo container center-me">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h1>Collab</h1>
@@ -28,9 +28,9 @@
       </div>
     </div>
   </div>
-</div>
+</section>
 
-<div class="footer">
+<section class="footer">
   <div class="container center-me">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -42,7 +42,7 @@
       </div>
     </div>
   </div>
-</div>
+</section>
 
 <div id="video" class="modal fade">
   <div class="modal-dialog modal-lg">
