--- a/stylesheets/page.less
+++ b/stylesheets/page.less
@@ -1,7 +1,8 @@
 @import "colors.less";
 
 .center-me {
-  height: 100vh;
+  height: 100%;
+  text-align: center;
   display: -moz-box;
   -moz-box-pack: center;
   -moz-box-align: center;
@@ -25,16 +26,13 @@
     font-size: 46px;
   }
 
-  .promo {
-    text-align: center;
-    .btn {
-      margin-bottom: 100px;
-    }
+  .promo .btn {
+    margin-bottom: 100px;
   }
 
   .footer {
     background: #2b2f3e;
-    text-align: center;
+    height: 100%;
     h1, h2, h3 {
       color: @base3;
     }
@@ -64,11 +62,5 @@
     left: 0;
     width: 100%;
     height: 100%;
-  }
-}
-
-@media (max-width: 767px) {
-  .page .promo {
-    padding-top: 50px;
   }
 }
