--- a/stylesheets/editor.less
+++ b/stylesheets/editor.less
@@ -85,27 +85,21 @@
     overflow: visible;
   }
 
-  .powerline {
+  .filename {
     position: fixed;
     bottom: 0;
-    width: 100%;
     height: 32px;
-    padding-left: 8ch;
+    margin-left: 8ch;
     margin-bottom: 15px;
-
-    .filename {
-      display: inline-block;
-      background: darken(@base2, 10%);
-      padding: 5px 10px;
-      border-radius: 20px;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-
-      &:hover {
-        opacity: 0.3;
-      }
+    background: darken(@base2, 10%);
+    padding: 5px 10px;
+    border-radius: 20px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    &:hover {
+      opacity: 0.3;
     }
   }
 
