added loading animation

--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -19,7 +19,7 @@ h1, h2, h3 {
 a {
   color: @violet;
   &:hover {
-    color: darken(@violet, 30%);
+    color: darken(@violet, 10%);
   }
 }
 
@@ -32,6 +32,7 @@ a {
 
 .center {
   position: absolute;
+  text-align: center;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
