--- a/templates/status-open.html
+++ b/templates/status-open.html
@@ -1,3 +1,4 @@
 <div class="center">
-  <h3>Waiting for connection ...</h3>
+  <img src="images/loading-bubbles.svg" alt="..." height="64" width="64">
+  <h3>Waiting for connection</h3>
 </div>
