--- a/stylesheets/form.less
+++ b/stylesheets/form.less
@@ -1,14 +1,6 @@
-label {
-  font-weight: bold;
-  font-size: 14px;
-  margin-bottom: 0;
-  text-transform: uppercase;
-}
-
 .form-control {
-  border-color: #dbdcde;
-  border-top-color: darken(#dbdcde, 15%);
+  border-color: @base1;
+  border-top-color: darken(@base1, 15%);
   box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.07);
   border-radius: 2px;
-  box-sizing: border-box;
 }
