show me who I am

--- a/templates/member.html
+++ b/templates/member.html
@@ -1,4 +1,7 @@
 {{ name }}
+{% if(me) { %}
+<span class="glyphicon glyphicon-user pull-right"></span>
+{% } %}
 {% if(is_coding) { %}
 <span class="glyphicon glyphicon-pencil pull-right"></span>
 {% } %}
