--- a/stylesheets/buttons.less
+++ b/stylesheets/buttons.less
@@ -15,3 +15,12 @@
     background: lighten(@violet, 5%);
   }
 }
+
+.btn-circle {
+  padding: 0;
+  height: 60px;
+  width: 60px;
+  line-height: 65px;
+  border-radius: 100px;
+  color: @base0;
+}
