--- a/stylesheets/page.less
+++ b/stylesheets/page.less
@@ -26,13 +26,18 @@
     font-size: 46px;
   }
 
-  .promo .btn {
-    margin-bottom: 100px;
+  .promo .btn-primary {
+    margin-bottom: 50px;
+  }
+
+  .promo .btn-circle {
+    margin-top: 50px;
   }
 
   .footer {
     background: @base03;
     height: 100%;
+    text-shadow: 0 -1px darken(@base03, 10%);
     h1, h2, h3 {
       color: @base3;
     }
@@ -42,7 +47,7 @@
     font-family: 'Titillium';
     text-align: center;
     font-size: 24px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     a {
       color: @blue;
       font-weight: bold;
