--- a/templates/home.html
+++ b/templates/home.html
@@ -26,6 +26,10 @@
         <a href="https://github.com/dennis84/collab-sublime">Sublime Text 2 Plugin</a> |
         <a href="https://github.com/dennis84/collab-web">Web App</a>
       </div>
+
+      <a href="#" class="btn btn-circle btn-next-section">
+        <span class="glyphicon glyphicon-chevron-down"></span>
+      </a>
     </div>
   </div>
 </section>
